--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
-:root{
-    --theme : #FFCD9E;
-    --primary-color : #000000;
-    --secondary-color : #FFFFFF;
+:root {
+    --theme: #FFCD9E;
+    --primary-color: #000000;
+    --secondary-color: #FFFFFF;
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
 }
 
-.toppart{
+.toppart {
     background-color: var(--theme);
     align-items: center;
     display: flex;
@@ -19,7 +19,7 @@
     justify-content: space-around;
 }
 
-.topleftside{
+.topleftside {
     height: 450px;
     /* margin-left: 132px; */
     width: 675px;
@@ -40,29 +40,29 @@
     padding-bottom: 10px;
 }
 
-.topleftside h5{
+.topleftside h5 {
     font-size: 22px;
     padding-top: 10px;
     padding-bottom: 20px;
 }
 
-.topleftside input{
+.topleftside input {
     border: 4px solid var(--primary-color);
     height: 48px;
     border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
     padding: 0px 4px 0px 4px;
-    width: 344px ;
+    width: 344px;
 }
 
-.topleftside button{
+.topleftside button {
     font-size: 20px;
     font-weight: 700;
     line-height: 24px;
     letter-spacing: 0em;
     text-align: center;
-    background:var(--primary-color);
+    background: var(--primary-color);
     color: var(--secondary-color);
     width: 216px;
     height: 50px;
@@ -70,7 +70,7 @@
     cursor: pointer;
 }
 
-.topleftside h6{
+.topleftside h6 {
     font-size: 16px;
     font-weight: 500;
     line-height: 26px;
@@ -84,7 +84,7 @@
 }
 
 /* footer */
-.bottompart{
+.bottompart {
     background-color: var(--primary-color);
     width: 100%;
     height: 100%;
@@ -93,13 +93,14 @@
     justify-content: space-around;
     padding: 60px 0px 60px 0px;
     color: var(--secondary-color);
-    
+
 }
 
-.leftside{
+.leftside {
     text-align: left;
 }
-.rightside{
+
+.rightside {
     text-align: right;
 }
 
@@ -111,17 +112,115 @@ p {
     margin-inline-end: 0px;
 }
 
-.lastp{
+.lastp {
     padding-top: 12px;
 }
 
-@media only screen and (max-width: 480px){
-.toprightside {
-    width: 100%;
-    height: 55%;
-    display: flex;
-    padding-left: 0;
-    align-items: center;
-    justify-content: center;
- }
+@media only screen and (max-width: 480px) {
+    .toprightside {
+        width: 100%;
+        height: 55%;
+        display: flex;
+        padding-left: 0;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+/* Responsive design */
+@media screen and (max-width: 1200px) {
+    .toprightside img {
+        width: 450px;
+        height: 450px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .toppart {
+        flex-direction: column;
+    }
+
+    .topleftside {
+        height: 300px;
+        width: 100%;
+        padding-top: 14px;
+        padding-bottom: 8px;
+        padding-left: 30px;
+    }
+
+    .topleftside h1 {
+        font-size: 35px;
+    }
+
+    .topleftside p {
+        line-height: 30px;
+        font-size: 20px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .topleftside h5 {
+        font-size: 20px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+    }
+
+    .topleftside input {
+        height: 40px;
+        font-size: 14px;
+        padding: 0px 4px 0px 4px;
+        width: 300px;
+    }
+
+    .topleftside button {
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0em;
+        height: 40px;
+    }
+
+    .topleftside h6 {
+        font-size: 14px;
+        width: 300px;
+        height: 51px;
+        padding-left: 16px;
+        padding-top: 20px;
+    }
+
+    .toprightside img {
+        width: 350px;
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .toppart {
+        height: 80%;
+    }
+
+    .topleftside {
+        height: 800%;
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 4px;
+        padding-left: 20px;
+    }
+
+    .topleftside button {
+        margin-top: 12px;
+    }
+
+    .toprightside img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .bottompart {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .rightside {
+        text-align: left;
+    }
 }
