--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,15 @@
     --theme: #FFCD9E;
     --primary-color: #000000;
     --secondary-color: #FFFFFF;
+
+    --font: Inter;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--font);
 }
 
 .toppart {
@@ -21,7 +23,6 @@
 
 .topleftside {
     height: 450px;
-    /* margin-left: 132px; */
     width: 675px;
     padding-top: 25px;
     padding-left: 40px;
@@ -29,8 +30,7 @@
 
 .topleftside h1 {
     font-size: 40px;
-    font-weight: 600;
-    /* line-height: 55px; */
+    /* font-weight: 600; */
 }
 
 .topleftside p {
@@ -116,17 +116,6 @@ p {
     padding-top: 12px;
 }
 
-@media only screen and (max-width: 480px) {
-    .toprightside {
-        width: 100%;
-        height: 55%;
-        display: flex;
-        padding-left: 0;
-        align-items: center;
-        justify-content: center;
-    }
-}
-
 /* Responsive design */
 @media screen and (max-width: 1200px) {
     .toprightside img {
@@ -136,64 +125,6 @@ p {
 }
 
 @media screen and (max-width: 1000px) {
-    .toppart {
-        flex-direction: column;
-    }
-
-    .topleftside {
-        height: 300px;
-        width: 100%;
-        padding-top: 14px;
-        padding-bottom: 8px;
-        padding-left: 30px;
-    }
-
-    .topleftside h1 {
-        font-size: 35px;
-    }
-
-    .topleftside p {
-        line-height: 30px;
-        font-size: 20px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-
-    .topleftside h5 {
-        font-size: 20px;
-        padding-top: 5px;
-        padding-bottom: 10px;
-    }
-
-    .topleftside input {
-        height: 40px;
-        font-size: 14px;
-        padding: 0px 4px 0px 4px;
-        width: 300px;
-    }
-
-    .topleftside button {
-        font-size: 15px;
-        line-height: 24px;
-        letter-spacing: 0em;
-        height: 40px;
-    }
-
-    .topleftside h6 {
-        font-size: 14px;
-        width: 300px;
-        height: 51px;
-        padding-left: 16px;
-        padding-top: 20px;
-    }
-
-    .toprightside img {
-        width: 350px;
-        height: 350px;
-    }
-}
-
-@media screen and (max-width: 600px) {
     .toppart {
         height: 80%;
     }
@@ -211,8 +142,36 @@ p {
     }
 
     .toprightside img {
-        width: 250px;
-        height: 250px;
+        width: 350px;
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topleftside {
+        height: 800%;
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 4px;
+        padding-left: 20px;
+    }
+
+    .topleftside input {
+        width: 90%;
+    }
+
+    .topleftside button {
+        margin-top: 12px;
+        width: 90%;
+    }
+
+    .topleftside h6{
+        text-align: left;
+    }
+
+    .toprightside img {
+        width: 300px;
+        height: 300px;
     }
 
     .bottompart {
