--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
     --font: Inter;
 }
 
+/* The box-sizing property allows us to include the padding and border in an element's total width and height. */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -17,6 +19,7 @@
     background-color: var(--theme);
     align-items: center;
     display: flex;
+    /* The flex-wrap CSS property sets whether flex items are forced onto one line or can wrap onto multiple lines. */
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -30,7 +33,6 @@
 
 .topleftside h1 {
     font-size: 40px;
-    /* font-weight: 600; */
 }
 
 .topleftside p {
@@ -59,9 +61,7 @@
 .topleftside button {
     font-size: 20px;
     font-weight: 700;
-    line-height: 24px;
     letter-spacing: 0em;
-    text-align: center;
     background: var(--primary-color);
     color: var(--secondary-color);
     width: 216px;
